--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -68,7 +68,7 @@ endif()
 
 
 # Shared compiler flags used by all builds (debug, profile, release)
-set(COMPILER_FLAGS "-g ${CPP11_FLAGS} ${OPENMP_C_FLAGS}" CACHE STRING "common compiler options")
+set(COMPILER_FLAGS "-Wall -g ${CPP11_FLAGS} ${OPENMP_C_FLAGS}" CACHE STRING "common compiler options")
 
 # Disable address space randomization for OSX lion and above
 if (APPLE)
@@ -527,26 +527,26 @@ set(CMAKE_REQUIRED_LIBRARIES ${crlbackup})
 include(CheckCXXCompilerFlag)
 ## ============================================================================
 # check if MARCH is set
-#if (NOT MARCH)
-#  #set to native if supported
-#  check_cxx_compiler_flag(-march=native HAS_MARCH_NATIVE)
-#  if(HAS_MARCH_NATIVE)
-#    set(MARCH "native")
-#  else()
-#    set(MARCH "x86-64")
-#  endif()
-#endif()
-#
-## check if MTUNE is set
-#if (NOT MTUNE)
-#  #set to native if supported
-#  check_cxx_compiler_flag(-mtune=native HAS_MTUNE_NATIVE)
-#  if(HAS_MTUNE_NATIVE)
-#    set(MTUNE "native")
-#  else()
-#    set(MTUNE "x86-64")
-#  endif()
-#endif()
+if (NOT MARCH)
+  #set to native if supported
+  check_cxx_compiler_flag(-march=native HAS_MARCH_NATIVE)
+  if(HAS_MARCH_NATIVE)
+    set(MARCH "native")
+  else()
+    set(MARCH "x86-64")
+  endif()
+endif()
+
+# check if MTUNE is set
+if (NOT MTUNE)
+  #set to native if supported
+  check_cxx_compiler_flag(-mtune=native HAS_MTUNE_NATIVE)
+  if(HAS_MTUNE_NATIVE)
+    set(MTUNE "native")
+  else()
+    set(MTUNE "x86-64")
+  endif()
+endif()
 
 ## ============================================================================
 # Setup compiler
@@ -567,28 +567,28 @@ endif()
 #endif()
 
 
-##disable Wno-unused-local-typedefs if available
-#check_cxx_compiler_flag(-Wno-unused-local-typedefs -march=_LOCAL_TYPEDEFS)
-#if(HAS_WNO_LOCAL_TYPEDEFS)
-#  set(WNO_LOCAL_TYPEDEFS "-Wno-unused-local-typedefs")
-#else()
-#  set(WNO_LOCAL_TYPEDEFS "")
-#endif()
+#disable Wno-unused-local-typedefs if available
+check_cxx_compiler_flag(-Wno-unused-local-typedefs HAS_WNO_LOCAL_TYPEDEFS)
+if(HAS_WNO_LOCAL_TYPEDEFS)
+  set(WNO_LOCAL_TYPEDEFS "-Wno-unused-local-typedefs")
+else()
+  set(WNO_LOCAL_TYPEDEFS "")
+endif()
 
 
 # Set the debug flags
 set(CMAKE_C_FLAGS_DEBUG
-  "-O0 -Winit-self ${PROFILING_FLAGS} ${COMPILER_FLAGS}"
+  "-O0 -Wno-attributes -march=${MARCH} -Winit-self ${PROFILING_FLAGS} ${COMPILER_FLAGS}"
   CACHE STRING "compiler options" FORCE)
 set(CMAKE_CXX_FLAGS_DEBUG
-  "-O0 ${WNO_LOCAL_TYPEDEFS} -Winit-self ${PROFILING_FLAGS} ${COMPILER_FLAGS}"
+  "-O0 ${WNO_LOCAL_TYPEDEFS} -Wno-attributes -march=${MARCH} -Winit-self ${PROFILING_FLAGS} ${COMPILER_FLAGS}"
   CACHE STRING "compiler options" FORCE)
 
 set(CMAKE_C_FLAGS_RELEASE
-  "-O3 ${PROFILING_FLAGS} ${COMPILER_FLAGS}"
+  "-O3 -Wno-attributes -march=${MARCH} -mtune=${MTUNE} ${PROFILING_FLAGS} ${COMPILER_FLAGS}"
   CACHE STRING "compiler options" FORCE)
 set(CMAKE_CXX_FLAGS_RELEASE
-  "-O3 ${WNO_LOCAL_TYPEDEFS} ${PROFILING_FLAGS} ${COMPILER_FLAGS}"
+  "-O3 ${WNO_LOCAL_TYPEDEFS} -Wno-attributes -march=${MARCH} -mtune=${MTUNE} ${PROFILING_FLAGS} ${COMPILER_FLAGS}"
   CACHE STRING "compiler options" FORCE)
 
 set(CMAKE_REQUIRED_FLAGS ${CMAKE_CXX_FLAGS_RELEASE})
